Fixed an issue where Oneboxes might get cropped in some themes with the default CSS

--- a/style/onebox.css
+++ b/style/onebox.css
@@ -61,6 +61,9 @@
 .onebox-header-wrapper, .onebox-footer-wrapper {
 	width: 100%;
 	display: table;
+	box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
 }
 
 .onebox-header-wrapper {
@@ -189,6 +192,9 @@
 	padding-left: 15px;
 	padding-right: 15px;
 	background:#fafafa;
+	box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
 }
 
 .dark .onebox-body-wrapper {
